--- a/src/app/posts/post-list/post-list.component.scss
+++ b/src/app/posts/post-list/post-list.component.scss
@@ -20,8 +20,7 @@
   app-aside-right-tripple {
     grid-column: 2/3;
     grid-row: 1/2;
-    background: $dark-grey;
-    color: $gold;
+    background: white;
   }
   .pagination {
     grid-column: 1/2;
